--- a/css/style.css
+++ b/css/style.css
@@ -15,16 +15,30 @@ body{
     padding-left: 1.5rem;
 }
 
-
 #header-1{
-    letter-spacing: 8px;
+    font-size: 3.5rem;
+    font-weight: 300;
+    letter-spacing: 3px;
+    }
+    
+    #header-2{
+    font-size: 1.25rem;
+    font-weight: 300;
+    }
+
+@media only screen and (max-width: 600px){
+    #header-1{
+    font-size: 3.5rem;
+    font-weight: 300;
+    letter-spacing: 3px;
+    }
+    
+    #header-2{
+    font-size: 1.5rem;
+    font-weight: 300;
+    }
 }
 
-#header-2{
-    font-size: 1.5rem;
-    font-weight: 400;
-    letter-spacing: 3.3px;
-}
 
 a{
     color: rgba(255, 255, 255, 0.6);
@@ -47,9 +61,14 @@ h1{
     padding-bottom: 15px;
 }
 
-.parallax-window {
+ .parallax-window {
     min-height: 400px;
     background: transparent;
+    }
+
+@media only screen and (max-width: 600px){
+   
+
 }
 
 .p{
